@@ -124,7 +124,6 @@
                <property name="tooltip" translatable="yes">Resize to half the original video size</property>
                <signal name="activate" handler="zoom_1_2_action_callback"/>
             </object>
-            <accelerator key="0"/>
          </child>
          <child>
             <object class="GtkAction" id="zoom-1-1">
@@ -132,7 +131,6 @@
                <property name="tooltip" translatable="yes">Resize to the original video size</property>
                <signal name="activate" handler="zoom_1_1_action_callback"/>
             </object>
-            <accelerator key="1"/>
          </child>
          <child>
             <object class="GtkAction" id="zoom-2-1">
@@ -140,7 +138,6 @@
                <property name="tooltip" translatable="yes">Resize to double the original video size</property>
                <signal name="activate" handler="zoom_2_1_action_callback"/>
             </object>
-            <accelerator key="2"/>
          </child>
          <child>
             <object class="GtkAction" id="aspect-ratio-menu">
