@@ -1,5 +1,14 @@
 2008-10-22  Bastien Nocera  <hadess@hadess.net>
 
+	* data/totem.ui:
+	* src/totem-sidebar.c (totem_sidebar_is_focused):
+	* src/totem-sidebar.h:
+	* src/totem.c (window_key_press_event_cb): Remove accelerators for the
+	window resize menu items, they were causing problems with the latest
+	GTK+ whenever the sidebar was used (Closes: #557447)
+
+2008-10-22  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_get_video_property):
 	* src/totem-preferences.c (totem_setup_preferences):
